--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
   "version": 2,
+  "env": {
+    "GA_ID": "UA-176440928-1"
+  },
   "rewrites": [{ "source": "/(.*)", "destination": "/api/server" }]
 }
