--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,26 +1,38 @@
 name: Tests
+
 on: [push, pull_request]
-env:
-  CI: true
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  build:
+    name: Tests
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+        node: [14.x]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Clone repository
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - name: Set up Node.js
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-${{ matrix.node }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.node }}-yarn-
+
+      - name: Use Node.js ${{ matrix.node }}
         uses: actions/setup-node@v1
         with:
-          node-version: "10"
+          node-version: ${{ matrix.node }}
 
-      - run: node --version
-      - run: npm --version
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
 
-      - name: Install npm dependencies
-        run: npm install
-
-      - name: Run tests
-        run: npm test
+      - name: Tests
+        run: yarn test
